# Visual-hypothesis-matching

./: .gitignore  README.md
vhm_core/: package.xml  setup.cfg  setup.py
vhm_core/vhm_core/embedding_compare/: clip_embedder.py  embedding_compare_node.py  embedding_decision_node.py
vhm_core/vhm_core/image_generation/: image_generation_node.py  prompt_builder.py  stable_diffusion_generator.py
vhm_core/vhm_core/image_segmentation/: fast_sam_segmenter.py  image_segmentation_node.py  mask_utils.py
vhm_core/vhm_core/utlis/: get_scene_node.py  result_utils.py
vhm_hri/: package.xml  setup.cfg  setup.py
vhm_interfaces/: CMakeLists.txt  package.xml
vhm_interfaces/action/: ExecuteVHM.action
vhm_interfaces/srv/: CompareEmbeddingCrops.srv  DecideEmbeddingMatch.srv  GenerateReferences.srv  LoadEmbeddingReferences.srv  SegmentImage.srv
vhm_pipeline/: CMakeLists.txt  package.xml
vhm_pipeline/include/vhm_pipeline/: service_requests.hpp
vhm_pipeline/src/: pipeline_controller_node.cpp  pipeline_reference_bank.cpp
vhm_results/: instances.json
vhm_results/generated_references/ball_01_10/: reference_bank.json
vhm_results/generated_references/ball_01_15/: reference_bank.json
vhm_results/generated_references/ball_01_5/: reference_bank.json
vhm_results/generated_references/ball_02_10/: reference_bank.json
vhm_results/generated_references/ball_02_15/: reference_bank.json
vhm_results/generated_references/ball_02_5/: reference_bank.json
vhm_results/generated_references/ball_03_10/: reference_bank.json
vhm_results/generated_references/ball_03_15/: reference_bank.json
vhm_results/generated_references/ball_03_5/: reference_bank.json
vhm_results/generated_references/ball_04_10/: reference_bank.json
vhm_results/generated_references/ball_04_15/: reference_bank.json
vhm_results/generated_references/ball_04_5/: reference_bank.json
vhm_results/generated_references/bowl_01_10/: reference_bank.json
vhm_results/generated_references/bowl_01_15/: reference_bank.json
vhm_results/generated_references/bowl_01_5/: reference_bank.json
vhm_results/generated_references/bowl_02_10/: reference_bank.json
vhm_results/generated_references/bowl_02_15/: reference_bank.json
vhm_results/generated_references/bowl_02_5/: reference_bank.json
vhm_results/generated_references/bowl_03_10/: reference_bank.json
vhm_results/generated_references/bowl_03_15/: reference_bank.json
vhm_results/image_segmentations/: segmentation_info.json
vhm_results/scene_plan/: scene_plan_42_25.json
vhm_results/scene_results/: scene_results_template.json
vhm_visualization/: package.xml  setup.cfg  setup.py
vhm_visualization/vhm_visualization/: annotator.py  generate_results_template.py  generate_scene_plan.py  get_scene.py
(+51 files in other folders)
