<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vhm_core</name>
  <version>0.0.0</version>
  <description>Main core package for VHM</description>
  <maintainer email="rsandovr@gmail.com">rusanrod</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>vhm_interfaces</depend>

  <exec_depend>python3-torch</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
